--- a/BudgetHelper/BudgetHelper/Localization/AppResources.resx
+++ b/BudgetHelper/BudgetHelper/Localization/AppResources.resx
@@ -120,4 +120,19 @@
   <data name="BroughtDate" xml:space="preserve">
     <value>Data zakupu:</value>
   </data>
+  <data name="Closed" xml:space="preserve">
+    <value>Zapakowane</value>
+  </data>
+  <data name="DaysToExpireAfterOpening" xml:space="preserve">
+    <value>Data ważności (p.o.):</value>
+  </data>
+  <data name="ExpireDate" xml:space="preserve">
+    <value>Data ważności:</value>
+  </data>
+  <data name="Open" xml:space="preserve">
+    <value>Otwarte</value>
+  </data>
+  <data name="OpenedDate" xml:space="preserve">
+    <value>Data otwarcia:</value>
+  </data>
 </root>
