Added AddProductPage, fonts, button styles

--- a/BudgetHelper/BudgetHelper/Localization/AppResources.en-US.resx
+++ b/BudgetHelper/BudgetHelper/Localization/AppResources.en-US.resx
@@ -135,4 +135,7 @@
   <data name="OpenedDate" xml:space="preserve">
     <value>Opening date:</value>
   </data>
+  <data name="ProductNameInput" xml:space="preserve">
+    <value>Product name</value>
+  </data>
 </root>
